--- a/lang/Русский.json
+++ b/lang/Русский.json
@@ -139,7 +139,8 @@
                 "tray": "Автозапуск свёрнутым",
                 "tray_notifications": "Всплывающие уведомления",
                 "priority_only": "Только приоритет",
-                "proxy": "Прокси (Требуется перезапуск):"
+                "proxy": "Прокси (Требуется перезапуск):",
+                "apprise_url": "Apprise URL:"
             },
             "game_name": "Игра",
             "priority": "Приоритет",
