--- a/lang/Українська.json
+++ b/lang/Українська.json
@@ -139,7 +139,8 @@
                 "tray": "Автозапуск у треї: ",
                 "tray_notifications": "Сповіщення: ",
                 "priority_only": "Лише пріоритетні: ",
-                "proxy": "Проксі (потребує перезапуску):"
+                "proxy": "Проксі (потребує перезапуску):",
+                "apprise_url": "Apprise URL:"
             },
             "game_name": "Назва гри",
             "priority": "Пріоритет",
