--- a/lang/Português.json
+++ b/lang/Português.json
@@ -138,7 +138,8 @@
                 "autostart": "Auto-início: ",
                 "tray": "Auto-iniciar na área de notificação: ",
                 "priority_only": "Apenas com prioridade: ",
-                "proxy": "Proxy (requer o reinício do app):"
+                "proxy": "Proxy (requer o reinício do app):",
+                "apprise_url": "Apprise URL:"
             },
             "game_name": "Nome do jogo",
             "priority": "Prioridade",
