--- a/lang/العربية.json
+++ b/lang/العربية.json
@@ -139,7 +139,8 @@
                 "tray": "تشغيل تلقائي في الدرج  ",
                 "tray_notifications": "إشعارات الدرج  ",
                 "priority_only": "الأولوية فقط  ",
-                "proxy": "بروكسي (يتطلب إعادة التشغيل) "
+                "proxy": "بروكسي (يتطلب إعادة التشغيل) ",
+                "apprise_url": "Apprise URL:"
             },
             "game_name": "اسم اللعبة",
             "priority": "أولوية",
