--- a/lang/Deutsch.json
+++ b/lang/Deutsch.json
@@ -134,6 +134,7 @@
                 "autostart": "Autostart: ",
                 "tray": "Autostart ins System Tray: ",
                 "priority_only": "Nur Priorität: ",
+                "apprise_url": "Apprise URL:",
                 "dark_mode": "Dunkler Modus: ",
                 "proxy": "Proxy (Erfordert Neustart):"
             },
